<resources>
    <string name="app_name">Olio_HT</string>
    <string name="sign_up">Sign up</string>
    <string name="password_again">Password again</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="xxxxxx">XXXXXX</string>
    <string name="phone_number">Phone number</string>
    <string name="lastname">Lastname</string>
    <string name="firstname">Firstname</string>
    <string name="address">Address</string>
    <string name="registration">Registration</string>
    <string name="information">Information</string>
    <string name="Close">Close</string>
    <string name="Open">Open</string>
    <string name="Welcome">Welcome</string>
    <string name="Settings">Settings</string>
    <string name="Logout">Logout</string>
    <string name="user_information">User information</string>
    <string name="edit">Edit</string>
    <string name="plus">+</string>
    <string name="account_number">Account number</string>
    <string name="starting_balance">Starting balance</string>
    <string name="credit_limit">Credit limit</string>
    <string name="create">Create</string>
    <string name="make_a_deposit">Make a deposit</string>
    <string name="amount_to_add">Amount to add</string>
    <string name="add">Add</string>
    <string name="confirm">Confirm</string>
    <string name="make_a_withdrawal">Make a withdrawal</string>
    <string name="add_an_account">Add an account</string>
    <string name="account_number_12digits">Account number (12digits)</string>
    <string name="make_a_payment">Make_a_payment</string>
    <string name="make_a_transfer">Make a transfer</string>

    <string-array name="account_typeArray">
        <item>Account type</item>
        <item>Credit</item>
        <item>Debit</item>
        <item>Savings</item>
    </string-array>

</resources>
